deployment/mysql-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress-mysql
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress-mysql
    tier: mysql
  #type: LoadBalancer
  clusterIP: None
---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: mysql-pv-claim1
 # labels:
  #  app: wordpress-mysql
#spec:
 # accessModes:
  #  - ReadWriteOnce
  #resources:
   # requests:
    #  storage: 10Gi
 # storageClassName: nfs    
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wp-mysql-sset
  labels:
    app: wordpress-mysql
spec:
  serviceName: wordpress-mysql
  replicas: 3
  selector:
    matchLabels:
      app: wordpress-mysql
      tier: mysql
  template:
    metadata:
      labels:
        app: wordpress-mysql
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim1
  volumeClaimTemplates:
   - metadata:
       name: mysql-persistent-storage
     spec:
       storageClassName: nfs
       accessModes:
         - ReadWriteOnce
       resources:
         requests:
           storage: 11Gi
